# openlico-monitor

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  Makefile  README.md  fossa-deps.yml  install.py  pyproject.toml  setup.cfg  setup.py  tox.ini
include/: ibumad.pxd
lico/monitor/plugins/icinga/base/cpu/: lico_check_cpu.py
lico/monitor/plugins/icinga/base/disk/: lico_check_disk.py
lico/monitor/plugins/icinga/base/memory/: lico_check_memory.py
lico/monitor/plugins/icinga/gpu/: lico_check_intel_xpu.py  lico_check_nvidia_gpu.py
lico/monitor/plugins/icinga/helper/: base.py
lico/monitor/plugins/icinga/network/eth/: lico_check_ethernet.py
lico/monitor/plugins/icinga/network/ib/: lico_check_infiniband.py
lico/monitor/plugins/icinga/outband/ipmi/health/: lico_check_health.py
lico/monitor/plugins/icinga/outband/ipmi/power/: lico_check_power.py
lico/monitor/plugins/icinga/outband/power/: lico_check_power.py
lico/monitor/plugins/icinga/outband/redfish/: common.py
lico/monitor/plugins/icinga/scheduler/lsf/: lico_check_lsf.py
lico/monitor/plugins/icinga/scheduler/pbs/: lico_check_pbs.py
lico/monitor/plugins/icinga/scheduler/slurm/: lico_check_slurm.py
lico/monitor/plugins/icinga/scheduler/utils/: __init__.py  jobinfo.py  schedulerbase.py
lico/monitor/plugins/icinga/scheduler/utils/gpu/: __init__.py  (+2 more)
lico/monitor/plugins/icinga/ufm/: common.py  lico_check_metrics.py  lico_check_ufm_switch.py  lico_start_monitoring.py
lico/monitor/plugins/icinga/vnc/: lico_check_vnc.py
scripts/: build_bin.sh  build_wheel.sh  config  download_deps.sh
src/: infiniband.pyx
(+4 files in other folders)
