[metadata]
name = openlico-monitor
license = Apache 2.0
classifiers =
    Private :: Do Not Upload

[options]
python_requires = >=3.6
namespace_packages=
    lico
    lico.monitor
packages = find_namespace:
include_package_data = true
zip_safe = false
install_requires =
    psutil~=5.9.0
    pyghmi~=1.5.61
    defusedxml~=0.7.1

[options.packages.find]
include = lico.monitor.plugins.*

[options.extras_require]
dev =
    tox>=2.8
    flake8>=3.4
    flake8-isort>=2.2
    isort>=4.2

[options.data_files]
bin = bin/lico_set_cap
